To confined scopes