@@ -19,12 +19,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-<!--                <version>3.10.1</version>-->
-                <configuration>
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
-                </configuration>
+                <version>3.10.1</version>
+<!--                <configuration>-->
+<!--                    <compilerArgs>-->
+<!--                        <compilerArg>&#45;&#45;enable-preview</compilerArg>-->
+<!--                    </compilerArgs>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
